Toggleable button and storage sync

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,13 @@
 {
     "name": "autofold",
-    "description": "Automatically folds hands on pokernow",
     "version": "1.0",
     "manifest_version": 3,
+
+    "description": "Fold bad hands on pokernow",
     "background": {
         "service_worker": "background.js"
     },
-    "permissions": ["storage", "activeTab", "scripting"],
+    "permissions": ["storage", "activeTab", "scripting", "tabs"],
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
@@ -14,13 +15,14 @@
             "32": "/images/get_started32.png",
             "48": "/images/get_started48.png",
             "128": "/images/get_started128.png"
-        },
-        "icons": {
-            "16": "/images/get_started16.png",
-            "32": "/images/get_started32.png",
-            "48": "/images/get_started48.png",
-            "128": "/images/get_started128.png"
         }
+    },
+    
+    "icons": {
+        "16": "/images/get_started16.png",
+        "32": "/images/get_started32.png",
+        "48": "/images/get_started48.png",
+        "128": "/images/get_started128.png"
     },
 
     "options_page": "options.html"
