--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,10 +4,7 @@
     "manifest_version": 3,
 
     "description": "Fold bad hands on pokernow",
-    "background": {
-        "service_worker": "background.js"
-    },
-    "permissions": ["storage", "activeTab", "scripting", "tabs"],
+
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
@@ -24,6 +21,27 @@
         "48": "/images/get_started48.png",
         "128": "/images/get_started128.png"
     },
+
+    "permissions": ["storage", "activeTab", "scripting", "tabs"],
+
+    
+    "background": {
+        "service_worker": "background.js"
+    },
+    
+    "content_scripts": [
+        {
+            "js": ["content.js", "js/jquery-3.6.0.min.js"],
+            "matches": ["https://www.pokernow.club/games/*"],
+            "run_at": "document_idle"
+        }
+    ],
+
+
+    "web_accessible_resources": [{
+        "resources": ["inject.js"],
+        "matches": ["<all_urls>"]
+    }],
 
     "options_page": "options.html"
 }
